// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageView Component should have fallback conditions for all props: fallback display 1`] = `
<PageLayout
  className=""
>
  <PageHeader
    productLabel={null}
    t={[Function]}
  >
    Subscriptions
  </PageHeader>
  <PageSection
    className=""
  >
    <EmptyState
      className="fadein"
      variant="full"
    />
  </PageSection>
</PageLayout>
`;

exports[`MessageView Component should render a basic component: basic 1`] = `
<PageLayout
  className=""
>
  <PageHeader
    productLabel={null}
    t={[Function]}
  >
    Subscriptions
  </PageHeader>
  <PageSection
    className=""
  >
    <EmptyState
      className="fadein"
      variant="full"
    >
      <EmptyStateIcon
        icon={[Function]}
      />
      <Title
        headingLevel="h2"
        size="lg"
      >
        lorem
      </Title>
      <EmptyStateBody>
        ipsum
      </EmptyStateBody>
    </EmptyState>
  </PageSection>
</PageLayout>
`;

exports[`MessageView Component should render children when provided: children display 1`] = `
<PageLayout
  className=""
>
  <PageHeader
    productLabel={null}
    t={[Function]}
  >
    Subscriptions
  </PageHeader>
  <PageSection
    className=""
  >
    child content
  </PageSection>
</PageLayout>
`;
